correction alignement tags

--- a/src/ProjetFrame/ProjetFrame.css
+++ b/src/ProjetFrame/ProjetFrame.css
@@ -108,6 +108,7 @@
     font-weight: bold;
     padding: .25rem .5rem;
     margin:.25rem .5rem .25rem 0;
+    display: inline-block;
 }
 
 .projetIframe button.btn-close{
